# sherp2.0

./: .dockerignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  README.md  bot.py  bot_config_template.toml  pyproject.toml  requirements.txt  util.py
.github/workflows/: formatting-check.yml  unit-tests.yml
cogs/: __init__.py  course_info.py  faq.py  leaderboard.py  message_board.py  misc.py  schedubuddy.py  sherpmail.py  snipe.py  starboard.py  wallofshame.py
cogs/helpers/: draw_schedule.py
data/: commands.json
helper/: __init__.py  config.py  get_contests.py  get_problems.py
tests/: conf_test.py  conftest.py  test_starboard.py  test_wallofshame.py
