[project]
name = "sherp2"
version = "0.1.0"
description = "Discord bot for the University of Alberta CS Discord server."
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.12.4",
    "beautifulsoup4==4.13.4",
    "discord.py==2.5.2",
    "gspread==6.2.1",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "protobuf==6.31.1",
    "python-dotenv==1.1.0",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.19",
    "ty>=0.0.54",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
