[project]
name = "sherp2"
version = "0.1.0"
description = "Discord bot for the University of Alberta CS Discord server."
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.14.1",
    "beautifulsoup4==4.15.0",
    "discord.py==2.7.1",
    "gspread==6.2.1",
    "pandas==3.0.3",
    "pillow==12.3.0",
    "protobuf==7.35.1",
    "python-dotenv==1.2.2",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.20",
    "ty==0.0.56",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
